<resources>
    <string name="app_name">ARoundMeNow</string>
    <string name="places">Places</string>
    <string name="pois">POIs</string>
    <string name="search_places">Search places…</string>
    <string name="about">About</string>
    <string name="google_maps_key">AIzaSyBeKbXbGWzymX-tlL5GKMC9qD5Hirr7JqI</string>
    <string name="no_places_found_around_you">No places found.</string>

    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="camera_access_is_needed">Camera access is needed to visualize places.</string>
    <string name="location_access_is_needed">Location access is needed to properly visualize places.</string>
    <string name="all_permissions_are_needed">Both camera and location access are needed to visualize places.</string>
    <string name="loading_photos">Loading photos…</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="website">Website</string>
    <string name="show_on_camera">Show on camera</string>
    <string name="show_details">Show details</string>
    <string name="loading_pois_failed">Loading nearby places of interest failed.</string>

    <string name="unable_to_load_pois_no_internet_connection">Unable to load nearby points of interest - no internet
        connection.
    </string>
    <string name="unable_to_load_pois_no_location">Unable to load nearby points of interest - location unavailable.
    </string>

    <string name="unable_to_load_nearby_places_no_internet_connection">Unable to load nearby places - no internet
        connection.
    </string>
    <string name="unable_to_load_nearby_places_no_location">Unable to load nearby places - location unavailable.
    </string>
    <string name="no_nearby_places_of_requested_type_found">Unable to find nearby places of requested type.</string>

    <string name="unable_to_load_place_details">Unable to load details of selected place - no internet
        connection.
    </string>

    <string name="more">More</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="place_autocomplete_error">Place Autocomplete error.</string>
    <string name="unable_to_visualize_place_no_location">Cannot show the place on camera - location unavailable.
    </string>
    <string name="google_play_service_unavailable">Google Play Services unavailable. Features requiring device location
        will not work.
    </string>
    <string name="location_disabled">Location disabled.</string>
    <string name="your_address_is">Your address is:</string>
    <string name="unable_to_find_your_address">Unable to find your address - check if location is enabled.</string>
    <string name="default_visualizer">Default visualizer</string>
    <string name="visaulizer_summary">Select whether found places should be displayed on camera or on map first by
        default.
    </string>
    <string name="place_search_radius_summary">Choose maximum place search radius.</string>
    <string name="place_search_radius">Place search radius</string>
</resources>
